fix: alignment

--- a/src/app/fetchChecks/fetchChecks.component.scss
+++ b/src/app/fetchChecks/fetchChecks.component.scss
@@ -19,6 +19,9 @@
   .container{
     padding: 1% 1%;
   }
+  .question span{
+    font-size: larger;
+}
 .button {
     font-weight: 500;
     font-size: 14px;
